deploy-k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:  
  name: spark-master
  namespace: big-data
  labels:
    app: spark-master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      containers:
      - name: spark-master
        image:  bde2020/spark-master:2.3.1-hadoop2.7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:  7077
        - containerPort:  8080
---

apiVersion: v1
kind: Service
metadata:
  name: spark-master-service
  namespace: big-data
spec:
  type: NodePort
  ports:
    - port: 7077
      targetPort: 7077
      protocol: TCP
      name: master
  selector:
    app: spark-master

---


apiVersion: v1
kind: Service
metadata:
  name: spark-webui-service
  namespace: big-data
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: ui
  selector:
    app: spark-master
  type: NodePort


---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-webui-ingress
  namespace: big-data
spec:
  rules:
  - host: spark-webui.data.com
    http:
      paths:
      - backend:
          serviceName: spark-webui-service
          servicePort: 8080
        path: /

---


apiVersion: extensions/v1beta1
kind: Deployment
metadata:  
  name: spark-worker
  namespace: big-data
  labels:
    app: spark-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image:  bde2020/spark-worker:2.3.1-hadoop2.7
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:  8081

---

apiVersion: v1
kind: Service
metadata:
  name: spark-worker-service
  namespace: big-data
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: worker
  selector:
    app: spark-worker

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spark-worker-ingress
  namespace: big-data
spec:
  rules:
  - host: spark-worker.data.com
    http:
      paths:
      - backend:
          serviceName: spark-worker-service
          servicePort: 8081
        path: /
